--- a/FrontEnd/pages/adminPages/InventoryManagement.html
+++ b/FrontEnd/pages/adminPages/InventoryManagement.html
@@ -1,48 +1,124 @@
 <!DOCTYPE html>
-<html lang="en" xmlns="http://www.w3.org/1999/html">
+<html lang="en">
 <head>
   <meta charset="UTF-8">
   <title>Inventory Management Form</title>
-  <!--<link rel="stylesheet" href="../../assets/icon/icon.jpeg" >-->
-
-  <meta content="Shoe Shop Management System" name="keywords">
-  <meta content="This is shoe management project" name="description">
-  <meta content="Sethmini Dissanayake" name="author">
-  <meta content="Sethmini Dissanayake" name="owner">
-  <meta content="width=device-width initial-scale=1 maximum-scale=1 minimum-scale=1 user-scalable=no" name="viewport">
-  <meta content="green" name="theme-color">
+  <meta name="keywords" content="Shoe Shop Management System">
+  <meta name="description" content="This is shoe management project">
+  <meta name="author" content="Sethmini Dissanayake">
+  <meta name="owner" content="Sethmini Dissanayake">
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no">
+  <meta name="theme-color" content="green">
 
   <link href="../../assets/vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
-  <link href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet">
-
+  <link href="https://fonts.googleapis.com/css?family=Nunito:200,300,400,600,700,800,900" rel="stylesheet">
   <link href="../../assets/vendor/styleslog/sb-admin-2.min.css" rel="stylesheet">
   <link href="../../assets/vendor/sweetalert2-11.6.16/sweetalert2.min.css" rel="stylesheet">
+  <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+
   <style>
-    .sidebar-nav .nav-link {
-      font-size: 22px;
+    .sidebar {
+      position: fixed;
+      top: 0;
+      bottom: 0;
+      left: 0;
+      width: 250px;
+      color: white;
+      padding-top: 20px;
     }
 
+    .sidebar a {
+      color: white;
+      text-decoration: none;
+      display: block;
+      padding: 10px 20px;
+    }
+
+    .sidebar a:hover, .sidebar a.active {
+      background-color: #007bff;
+      border-radius: 5px;
+    }
+
+    .main {
+      margin-left: 250px;
+      padding: 20px;
+    }
+
+    .navbar {
+      position: fixed;
+      top: 0;
+      width: 100%;
+      z-index: 1000;
+    }
+
+    body {
+      padding-top: 70px; /* Adjust according to the height of your navbar */
+    }
+
+    .form-group label {
+      font-weight: bold;
+    }
+
+    .btn-custom {
+      background-color: #007bff;
+      color: white;
+      border-radius: 5px;
+      transition: background-color 0.3s;
+    }
+
+    .btn-custom:hover {
+      background-color: #0056b3;
+    }
+
+    .card {
+      border-radius: 10px;
+      box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+      margin-top: 20px;
+    }
+
+    .navbar-brand img {
+      width: 30px;
+      margin-right: 10px;
+    }
+
+    .table thead {
+      position: sticky;
+      top: 0;
+      z-index: 1;
+      background-color: white;
+    }
+
+    .footer {
+      text-align: center;
+      padding: 10px;
+      background-color: #f8f9fa;
+    }
+
+    .container form {
+      background: white;
+      padding: 20px;
+      border-radius: 10px;
+      box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+    }
   </style>
-  <link rel="stylesheet" href="../../assets/css/Dashboard.css">
-  <script src="../../assets/js/jquery-3.7.1.min.js"></script>
 </head>
-<body style=" background-color: #f8f9fa">
+<body style="background-color: #f8f9fa">
 
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
   <a class="navbar-brand" href="#">
-    <img src="../../assets/icon/icon.jpeg" alt="Logo" class="logo mr-2"> Hello Shoe- Shoe Management System
+    <img src="../../assets/icon/icon.jpeg" alt="Logo" class="logo mr-2"> Shoe Management System
   </a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
 
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
-    <form class="form-inline my-2 my-lg-0">
-      <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search" id="searchInput">
+    <form class="form-inline my-2 my-lg-0 ml-auto">
+      <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search" id="searchInput">
       <button class="btn btn-outline-success my-2 my-sm-0" type="submit" id="btnItemSearch">Search</button>
     </form>
     <ul class="navbar-nav ml-auto">
@@ -63,21 +139,20 @@
   </div>
 </nav>
 
-<div class="sidebar">
-  <a href="../../pages/adminDashboard.html">Dashboard</a>
-  <a href="../adminPages/SaleManagement.html">Sales</a>
-  <a href="../adminPages/OrderDetails.html">Sale Details</a>
-  <a href="../adminPages/SupplierManagement.html">Suppliers</a>
-  <a href="../adminPages/CustomerManagement.html">Customers</a>
-  <a href="../adminPages/EmployeeManagement.html">Employees</a>
-  <a href="../adminPages/InventoryManagement.html">Inventory</a>
-  <a href="#">Users</a>
-  <a href="#">Log Out</a>
+<div class="sidebar" style="background-color: #a3b6ee">
+  <a href="../../pages/adminDashboard.html" class="active"><i class="fas fa-tachometer-alt"></i> Dashboard</a>
+  <a href="../adminPages/SaleManagement.html"><i class="fas fa-dollar-sign"></i> Sales</a>
+  <a href="../adminPages/OrderDetails.html"><i class="fas fa-receipt"></i> Sale Details</a>
+  <a href="../adminPages/SupplierManagement.html"><i class="fas fa-truck"></i> Suppliers</a>
+  <a href="../adminPages/CustomerManagement.html"><i class="fas fa-users"></i> Customers</a>
+  <a href="../adminPages/EmployeeManagement.html"><i class="fas fa-user-tie"></i> Employees</a>
+  <a href="../adminPages/InventoryManagement.html"><i class="fas fa-boxes"></i> Inventory</a>
+  <a href="#"><i class="fas fa-user"></i> Users</a>
+  <a href="#"><i class="fas fa-sign-out-alt"></i> Log Out</a>
 </div>
 
-
-<main id="main" class="main" style="padding-left: 100px">
-  <div class="container mt-5">
+<main class="main">
+  <div class="container">
     <h2>Inventory Form</h2>
     <form>
       <div class="form-row">
@@ -86,52 +161,55 @@
           <input type="text" class="form-control" id="itemCode" placeholder="Item Code">
         </div>
         <div class="form-group col-md-6">
-          <label for="itemDesc">Item Desc</label>
-          <input type="text" class="form-control" id="itemDesc" placeholder="Item Desc">
+          <label for="itemDesc">Item Description</label>
+          <input type="text" class="form-control" id="itemDesc" placeholder="Item Description">
         </div>
       </div>
 
       <div class="form-row">
         <div class="form-group col-md-6">
           <label for="itemImage">Item Image</label>
-          <input type="file" class="form-control" id="itemImage">
+          <input type="file" class="form-control-file" id="itemImage">
         </div>
         <div class="form-group col-md-6">
           <label for="itemCategory">Category</label>
-          <input type="text" class="form-control" id="itemCategory">
-        </div>
-      </div>
-      <div class="form-row">
-        <div class="form-group col-md-6">
-          <label for="size">Size</label>
-          <input type="text" class="form-control" id="size">
-        </div>
-        <div class="form-group col-md-6">
-          <label for="supplierCode">Supplier Code</label>
-          <input type="text" class="form-control" id="supplierCode">
-        </div>
-      </div>
-      <div class="form-row">
-        <div class="form-group col-md-6">
-          <label for="supplierName">Supplier Name</label>
-          <input type="text" class="form-control" id="supplierName">
-        </div>
-        <div class="form-group col-md-6">
-          <label for="unitPrice">Unit Price-Sale</label>
-          <input type="text" class="form-control" id="unitPrice">
+          <input type="text" class="form-control" id="itemCategory" placeholder="Category">
         </div>
       </div>
 
       <div class="form-row">
         <div class="form-group col-md-6">
-          <label for="unitPriceBuy">Unit Price-Buy</label>
-          <input type="text" class="form-control" id="unitPriceBuy">
+          <label for="size">Size</label>
+          <input type="text" class="form-control" id="size" placeholder="Size">
+        </div>
+        <div class="form-group col-md-6">
+          <label for="supplierCode">Supplier Code</label>
+          <input type="text" class="form-control" id="supplierCode" placeholder="Supplier Code">
+        </div>
+      </div>
+
+      <div class="form-row">
+        <div class="form-group col-md-6">
+          <label for="supplierName">Supplier Name</label>
+          <input type="text" class="form-control" id="supplierName" placeholder="Supplier Name">
+        </div>
+        <div class="form-group col-md-6">
+          <label for="unitPrice">Unit Price - Sale</label>
+          <input type="text" class="form-control" id="unitPrice" placeholder="Unit Price - Sale">
+        </div>
+      </div>
+
+      <div class="form-row">
+        <div class="form-group col-md-6">
+          <label for="unitPriceBuy">Unit Price - Buy</label>
+          <input type="text" class="form-control" id="unitPriceBuy" placeholder="Unit Price - Buy">
         </div>
         <div class="form-group col-md-6">
           <label for="profit">Expected Profit</label>
-          <input type="text" class="form-control" id="profit">
+          <input type="text" class="form-control" id="profit" placeholder="Expected Profit">
         </div>
       </div>
+
       <div class="form-row">
         <div class="form-group col-md-6">
           <label for="profitMargin">Profit Margin</label>
@@ -143,67 +221,63 @@
             <option selected>Choose...</option>
             <option value="LOW">LOW</option>
             <option value="AVAILABLE">AVAILABLE</option>
-            <option value="NOT_AVAILABLE">NOT_AVAILABLE</option>
+            <option value="NOT_AVAILABLE">NOT AVAILABLE</option>
           </select>
         </div>
       </div>
+
       <div class="form-row">
-      <div class="form-group col-md-6">
-        <label for="quantity">Quantity</label>
-        <input type="text" class="form-control" id="quantity">
-      </div>
+        <div class="form-group col-md-6">
+          <label for="quantity">Quantity</label>
+          <input type="text" class="form-control" id="quantity" placeholder="Quantity">
+        </div>
       </div>
 
-      <button id="btnItemSave"  type="button" class="btn btn-primary mr-2 " style="background-color: #00d25b">Submit</button>
-      <button id="btnItemUpdate" type="button" class="btn btn-primary mr-2" style="background-color: #fc424a">Update</button>
-      <button id="btnItemDelete" type="button" class="btn btn-primary mr-2" style="background-color: #ffab00">Delete</button>
-      <button id="btnItemClear" type="button" class="btn btn-dark" style="background-color: #8f5fe8">Clear</button>
+      <div class="form-group">
+        <button id="btnItemSave" type="button" class="btn btn-custom mr-2">Submit</button>
+        <button id="btnItemUpdate" type="button" class="btn btn-warning mr-2">Update</button>
+        <button id="btnItemDelete" type="button" class="btn btn-danger mr-2">Delete</button>
+        <button id="btnItemClear" type="button" class="btn btn-dark">Clear</button>
+      </div>
     </form>
   </div>
 
-  <div class="card info-card" style="margin-top: 10px; margin-right: 12px;margin-left: 90px">
-    <div class="row mt-1 mt-md-2 mt-lg-4 mm-2 p-2 justify-content-around" style="height: 350px;">
-      <div class="col-11 justify-content-around sectionBorder"
-           style="height: 290px; background: white">
-        <div class="table-responsive customerTableDiv overflow-auto " style="height: 300px;">
-          <table class="table table-light table-striped table-bordered table-hover" >
-            <thead class="text-dark table-danger text-center  table-bordered sticky-top">
-            <tr>
-              <th scope="col">Item Code</th>
-              <th scope="col">Item Desc</th>
-              <th scope="col">Item Image</th>
-              <th scope="col">Category</th>
-              <th scope="col">Size</th>
-              <th scope="col"> Quantity</th>
-              <th scope="col">Supplier Code</th>
-              <th scope="col">Supplier Name</th>
-              <th scope="col">Unit Price-Sale</th>
-              <th scope="col">Unit Price-Buy</th>
-              <th scope="col">Expected Profit</th>
-              <th scope="col">Profit Margin</th>
-              <th scope="col"> Status</th>
-
-
-
-            </tr>
-            </thead>
-            <tbody id="inventoryTable"></tbody>
-          </table>
-        </div>
+  <div class="card">
+    <div class="card-header">
+      Inventory List
+    </div>
+    <div class="card-body">
+      <div class="table-responsive">
+        <table class="table table-striped table-bordered">
+          <thead class="thead-dark text-center">
+          <tr>
+            <th scope="col">Item Code</th>
+            <th scope="col">Item Description</th>
+            <th scope="col">Item Image</th>
+            <th scope="col">Category</th>
+            <th scope="col">Size</th>
+            <th scope="col">Quantity</th>
+            <th scope="col">Supplier Code</th>
+            <th scope="col">Supplier Name</th>
+            <th scope="col">Unit Price - Sale</th>
+            <th scope="col">Unit Price - Buy</th>
+            <th scope="col">Expected Profit</th>
+            <th scope="col">Profit Margin</th>
+            <th scope="col">Status</th>
+          </tr>
+          </thead>
+          <tbody id="inventoryTable"></tbody>
+        </table>
       </div>
     </div>
-
   </div>
 </main>
 
-<footer id="footer" class="footer">
-  <div class="copyright">
-    &copy; Copyright <strong><span>Shoe Management System</span></strong>. All Rights Reserved
-  </div>
-  <div class="credits">
-    Designed by <a href="">Sethmini Dissanayake</a>
-  </div>
+<footer class="footer">
+  <div>&copy; <strong>Shoe Management System</strong>. All Rights Reserved</div>
+  <div>Designed by <a href="#">Sethmini Dissanayake</a></div>
 </footer>
+
 
 <script>
   getAllItems();
