--- a/FrontEnd/pages/adminPages/EmployeeManagement.html
+++ b/FrontEnd/pages/adminPages/EmployeeManagement.html
@@ -12,14 +12,13 @@
     <meta content="green" name="theme-color">
 
     <link href="../../assets/vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
-    <link href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet">
-
+    <link href="https://fonts.googleapis.com/css?family=Nunito:200,300,400,600,700,800,900" rel="stylesheet">
     <link href="../../assets/vendor/styleslog/sb-admin-2.min.css" rel="stylesheet">
     <link href="../../assets/vendor/sweetalert2-11.6.16/sweetalert2.min.css" rel="stylesheet">
-
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+
     <style>
         .sidebar-nav .nav-link {
             font-size: 18px;
@@ -89,31 +88,49 @@
         .btn-custom:hover {
             background-color: #0056b3;
         }
+
+        body {
+            padding-top: 70px; /* Adjust according to the height of your navbar */
+        }
+
+        .navbar {
+            position: fixed;
+            top: 0;
+            width: 100%;
+            z-index: 1000;
+        }
+
+        main {
+            margin-left: 250px;
+            padding: 20px;
+        }
+
+        .container {
+            margin-top: 20px;
+        }
     </style>
     <link rel="stylesheet" href="../../assets/css/Dashboard.css">
-    <script src="../../assets/js/jquery-3.7.1.min.js"></script>
-    <script src="../../assets/js/employee.js"></script>
+    <link rel="stylesheet" href="../../assets/css/styles.css">
 </head>
 <body style="background-color: #f8f9fa">
 
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <a class="navbar-brand" href="#">
-        <img src="../../assets/icon/icon.jpeg" alt="Logo" class="logo mr-2"> Hello Shoe - Shoe Management System
+        <img src="../../assets/icon/icon.jpeg" alt="Logo">Hello Shoe - Shoe Management System
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
     </button>
 
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <form class="form-inline my-2 my-lg-0">
+        <form class="form-inline my-2 my-lg-0 ml-auto">
             <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
             <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
         </form>
         <ul class="navbar-nav ml-auto">
             <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                    <img src="../../assets/img/admin1.jpg" alt="Admin Photo" class="rounded-circle" style="width: 50px;">
-                    David Wilson
+                    <img src="../../assets/img/admin1.jpg" alt="Admin Photo" class="rounded-circle" style="width: 50px;"> David Wilson
                 </a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                     <a class="dropdown-item" href="#">My Profile</a>
@@ -127,7 +144,7 @@
     </div>
 </nav>
 
-<div class="sidebar">
+<div class="sidebar" style="background-color: #a3b6ee">
     <a href="../../pages/adminDashboard.html" class="active"><i class="fas fa-tachometer-alt"></i> Dashboard</a>
     <a href="../adminPages/SaleManagement.html"><i class="fas fa-dollar-sign"></i> Sales</a>
     <a href="../adminPages/OrderDetails.html"><i class="fas fa-receipt"></i> Sale Details</a>
@@ -296,7 +313,6 @@
         </div>
     </div>
 </main>
-
 <footer id="footer" class="footer">
     <div class="copyright">
         &copy; Copyright <strong><span>Shoe Management System</span></strong>. All Rights Reserved
@@ -306,307 +322,11 @@
     </div>
 </footer>
 
+<script src="../../assets/js/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
+<script crossorigin="anonymous"
+        integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+        src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js"></script>
+<script src="../../assets/js/employee.js"></script>
 
-
-<script>
-    getAllEmployees();
-
-    /*getAll Employees*/
-    function getAllEmployees(){
-        $.ajax({
-            url: "http://localhost:8080/app/api/v1/employees/getAllEmployees",
-            method: "GET",
-            dataType: "json",
-            success: function (response) {
-                console.log(response);
-                console.log(response.length);
-                console.log("success to load employees")
-                loadEmployeeDataInTable(response);
-                generateEmployeeID();
-            },
-            error: function (xhr, status, err) {
-                console.log("Fail to load employees")
-                console.log(err)
-            }
-        })
-    }
-
-    /*load employee into table*/
-    function loadEmployeeDataInTable(employees) {
-        var tableBody = document.getElementById("employeeTable");
-        tableBody.innerHTML = "";
-
-        employees.forEach(function (employee) {
-            var row = document.createElement("tr");
-
-            ["employeeCode", "employeeName", "employeeProfilePic", "gender", "status", "branch", "designation", "accessRole",
-                "dob", "joinDate", "address", "contactNo", "Email", "guardianName", "guardianContactNo"].forEach(function (property) {
-                var cell = document.createElement("td");
-                cell.textContent = employee[property];
-                row.appendChild(cell);
-            });
-            tableBody.appendChild(row);
-        });
-
-    }
-
-    /*Save employee*/
-
-    $(document).on("click", "#btnSupplierSave", function() {
-        console.log("Button clicked");
-        saveSupplier();
-    });
-
-    function saveEmployee(){
-        const employeeCode = document.getElementById('employeeCode').value;
-        const employeeName = document.getElementById('employeeName').value;
-        const employeeProfilePic = document.getElementById('employeeProfilePic').value;
-        const gender = document.getElementById('gender').value;
-        const status= document.getElementById('status').value;
-        const branch = document.getElementById('branch').value;
-        const designation = document.getElementById('designation').value;
-        const accessRole = document.getElementById('accessRole').value;
-        const dob = document.getElementById('dob').value;
-        const joinDate = document.getElementById('joinDate').value;
-        const address1 = document.getElementById('inputAddress').value;
-        const address2 = document.getElementById('inputCity').value;
-        const contactNo = document.getElementById('contactNo').value;
-        const Email = document.getElementById('Email').value;
-        const guardianName = document.getElementById('guardianName').value;
-        const guardianContactNo = document.getElementById('guardianContactNumber').value;
-
-        const employee = {
-            employeeCode:employeeCode,
-            employeeName:employeeName,
-            employeeProfilePic:employeeProfilePic,
-            gender:gender,
-            status:status,
-            branch:branch,
-            designation:designation,
-            accessRole:accessRole,
-            dob:dob,
-            joinDate:joinDate,
-            address:`${address1},${address2}`,
-            contactNo:contactNo,
-            Email:Email,
-            guardianName:guardianName,
-            guardianContactNo:guardianContactNo
-        }
-
-        $.ajax({
-            url: 'http://localhost:8080/app/api/v1/employees/save',
-            type: 'POST',
-            contentType: 'application/json',
-            data: JSON.stringify(employee),
-            success: function (response) {
-                console.log(response);
-                alert('Employees information saved successfully!');
-                getAllEmployees();
-            },
-            error: function (xhr, status, error) {
-                console.error(error);
-                alert('Failed to save employee information. Please try again.');
-            }
-        });
-    }
-
-    /*table click*/
-    $('#employeeTable').on('click', 'tr', function (){
-        var employeeCode = $(this).find('td:eq(0)').text();
-        var employeeName = $(this).find('td:eq(1)').text();
-        var employeeProfilePic = $(this).find('td:eq(2)').text();
-        var gender = $(this).find('td:eq(3)').text();
-        var status = $(this).find('td:eq(4)').text();
-        var branch = $(this).find('td:eq(5)').text();
-        var designation = $(this).find('td:eq(6)').text();
-        var accessRole = $(this).find('td:eq(7)').text();
-        var dob = $(this).find('td:eq(8)').text();
-        var joinDate = $(this).find('td:eq(9)').text();
-        var address = $(this).find('td:eq(10)').text();
-        var contactNo = $(this).find('td:eq(11)').text();
-        var Email = $(this).find('td:eq(12)').text();
-        var guardianName = $(this).find('td:eq(13)').text();
-        var guardianContactNo = $(this).find('td:eq(14)').text();
-
-        $("#employeeCode").val(employeeCode);
-        $("#employeeName").val(employeeName);
-        $("#employeeProfile").val(employeeProfilePic);
-        $("#gender").val(gender);
-        $("#status").val(status);
-        $("#branch").val(branch);
-        $("#designation").val(designation);
-        $("#accessRole").val(accessRole);
-        $("#dob").val(dob);
-        $("#joinDate").val(joinDate);
-        $("#inputAddress").val(address);
-        $("#contactNo").val(contactNo);
-        $("#Email").val(Email);
-        $("#guardianName").val(guardianName);
-        $("#guardianContactNo").val(guardianContactNo);
-
-    })
-
-    $(document).on("click", "#btnEmployeeUpdate", function() {
-        console.log("Button clicked");
-        updateEmployee();
-    });
-
-    function updateEmployee(){
-        const employeeCode = document.getElementById('employeeCode').value;
-        const employeeName = document.getElementById('employeeName').value;
-        const employeeProfilePic = document.getElementById('employeeProfilePic').value;
-        const gender = document.getElementById('gender').value;
-        const status= document.getElementById('status').value;
-        const branch = document.getElementById('branch').value;
-        const designation = document.getElementById('designation').value;
-        const accessRole = document.getElementById('accessRole').value;
-        const dob = document.getElementById('dob').value;
-        const joinDate = document.getElementById('joinDate').value;
-        const address1 = document.getElementById('inputAddress').value;
-        const address2 = document.getElementById('inputCity').value;
-        const contactNo = document.getElementById('contactNo').value;
-        const Email = document.getElementById('Email').value;
-        const guardianName = document.getElementById('guardianName').value;
-        const guardianContactNo = document.getElementById('guardianContactNumber').value;
-
-        const employee = {
-            employeeCode:employeeCode,
-            employeeName:employeeName,
-            employeeProfilePic:employeeProfilePic,
-            gender:gender,
-            status:status,
-            branch:branch,
-            designation:designation,
-            accessRole:accessRole,
-            dob:dob,
-            joinDate:joinDate,
-            address:`${address1},${address2}`,
-            contactNo:contactNo,
-            Email:Email,
-            guardianName:guardianName,
-            guardianContactNo:guardianContactNo
-        }
-
-        $.ajax({
-            url: 'http://localhost:8080/app/api/v1/employees/update',
-            type: 'POST',
-            contentType: 'application/json',
-            data: JSON.stringify(employee),
-            success: function (response) {
-                console.log(response);
-                alert('Employees information updated successfully!');
-                getAllEmployees();
-            },
-            error: function (xhr, status, error) {
-                console.error(error);
-                alert('Failed to save employee information. Please try again.');
-            }
-        });
-    }
-
-    /*table click*/
-    $('#employeeTable').on('click', 'tr', function (){
-        var employeeCode = $(this).find('td:eq(0)').text();
-        var employeeName = $(this).find('td:eq(1)').text();
-        var employeeProfilePic = $(this).find('td:eq(2)').text();
-        var gender = $(this).find('td:eq(3)').text();
-        var status = $(this).find('td:eq(4)').text();
-        var branch = $(this).find('td:eq(5)').text();
-        var designation = $(this).find('td:eq(6)').text();
-        var accessRole = $(this).find('td:eq(7)').text();
-        var dob = $(this).find('td:eq(8)').text();
-        var joinDate = $(this).find('td:eq(9)').text();
-        var address = $(this).find('td:eq(10)').text();
-        var contactNo = $(this).find('td:eq(11)').text();
-        var Email = $(this).find('td:eq(12)').text();
-        var guardianName = $(this).find('td:eq(13)').text();
-        var guardianContactNo = $(this).find('td:eq(14)').text();
-
-        $("#employeeCode").val(employeeCode);
-        $("#employeeName").val(employeeName);
-        $("#employeeProfile").val(employeeProfilePic);
-        $("#gender").val(gender);
-        $("#status").val(status);
-        $("#branch").val(branch);
-        $("#designation").val(designation);
-        $("#accessRole").val(accessRole);
-        $("#dob").val(dob);
-        $("#joinDate").val(joinDate);
-        $("#inputAddress").val(address);
-        $("#contactNo").val(contactNo);
-        $("#Email").val(Email);
-        $("#guardianName").val(guardianName);
-        $("#guardianContactNo").val(guardianContactNo);
-
-    })
-
-    $(document).ready(function () {
-        getAllEmployees();
-
-        $('#btnEmployeeDelete').on('click', function() {
-            var employeeCode = $('#employeeCode').val();
-            if (employeeCode !== "") {
-                deleteEmployee(employeeCode);
-            } else {
-                alert("Please select a employee to delete.");
-            }
-        });
-    });
-
-    function deleteEmployee(employeeCode) {
-        $.ajax({
-            url: 'http://localhost:8080/app/api/v1/employees/' + employeeCode,
-            type: 'DELETE',
-            success: function (response) {
-                console.log(response);
-                alert('Employee deleted successfully!');
-                getAllEmployees();
-            },
-            error: function (xhr, status, error) {
-                console.error(error);
-                alert('Failed to delete employee. Please try again.');
-            }
-        });
-    }
-
-    function generateEmployeeID() {
-        $("#employeeCode").val("C00-001");
-        $.ajax({
-            url: "http://localhost:8080/app/api/v1/employees/EmployeeIdGenerate",
-            method: "GET",
-            contentType: "application/json",
-            dataType: "json",
-            success: function (resp) {
-                let id = resp.value;
-                console.log("id" +id);
-
-                if (id === null){
-                    $("#employeeCode").val("E00-001" );
-                } else {
-                    let tempId = parseInt(id.split("-")[1]);
-                    tempId = tempId + 1;
-                    if (tempId <= 9) {
-                        $("#employeeCode").val("E00-00" + tempId);
-                    } else if (tempId <= 99) {
-                        $("#employeeCode").val("E00-0" + tempId);
-                    } else {
-                        $("#employeeCode").val("E00-" + tempId);
-                    }
-                }
-            },
-            error: function (ob, statusText, error) {
-
-            }
-        });
-    }
-
-    $(document).ready(function () {
-        getAllEmployees();
-    });
-
-    function employeeCapitalizeFirstLetter(str) {
-        return str.charAt(0).toUpperCase() + str.slice(1).toLowerCase();
-    }
-</script>
 </body>
 </html>
