User.html class created

--- a/FrontEnd/pages/OrderDetails.html
+++ b/FrontEnd/pages/OrderDetails.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Sale Management Form</title>
-  <link rel="stylesheet" href="../../assets/icon/icon.jpeg" >
+  <link rel="stylesheet" href="../assets/icon/icon.jpeg" >
 
   <meta content="Shoe Shop Management System" name="keywords">
   <meta content="This is shoe management project" name="description">
@@ -12,11 +12,11 @@
   <meta content="width=device-width initial-scale=1 maximum-scale=1 minimum-scale=1 user-scalable=no" name="viewport">
   <meta content="green" name="theme-color">
 
-  <link href="../../assets/vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
+  <link href="../assets/vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
   <link href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet">
 
-  <link href="../../assets/vendor/styleslog/sb-admin-2.min.css" rel="stylesheet">
-  <link href="../../assets/vendor/sweetalert2-11.6.16/sweetalert2.min.css" rel="stylesheet">
+  <link href="../assets/vendor/styleslog/sb-admin-2.min.css" rel="stylesheet">
+  <link href="../assets/vendor/sweetalert2-11.6.16/sweetalert2.min.css" rel="stylesheet">
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
@@ -27,15 +27,15 @@
     }
 
   </style>
-  <link rel="stylesheet" href="../../assets/css/Dashboard.css">
-  <script src="../../assets/js/jquery-3.7.1.min.js"></script>
-  <link rel="stylesheet" href="../../assets/css/styles.css">
+  <link rel="stylesheet" href="../assets/css/Dashboard.css">
+  <script src="../assets/js/jquery-3.7.1.min.js"></script>
+  <link rel="stylesheet" href="../assets/css/styles.css">
 </head>
 <body style=" background-color: #f8f9fa">
 
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
   <a class="navbar-brand" href="#">
-    <img src="../../assets/icon/icon.jpeg" alt="Logo" class="logo mr-2"> Hello Shoe- Shoe Management System
+    <img src="../assets/icon/icon.jpeg" alt="Logo" class="logo mr-2"> Hello Shoe- Shoe Management System
   </a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
@@ -49,7 +49,7 @@
     <ul class="navbar-nav ml-auto">
       <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-          <img src="../../assets/img/admin1.jpg" alt="Admin Photo" class="rounded-circle" style="width: 50px;">
+          <img src="../assets/img/admin1.jpg" alt="Admin Photo" class="rounded-circle" style="width: 50px;">
           David Wilson
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
@@ -65,13 +65,13 @@
 </nav>
 
 <div class="sidebar">
-  <a href="../../pages/adminDashboard.html">Dashboard</a>
-  <a href="../adminPages/SaleManagement.html">Sales</a>
+  <a href="adminDashboard.html">Dashboard</a>
+  <a href="SaleManagement.html">Sales</a>
   <a href="../adminPages/OrderDetails.html">Sale Details</a>
-  <a href="../adminPages/SupplierManagement.html">Suppliers</a>
-  <a href="../adminPages/CustomerManagement.html">Customers</a>
-  <a href="../adminPages/EmployeeManagement.html">Employees</a>
-  <a href="../adminPages/InventoryManagement.html">Inventory</a>
+  <a href="SupplierManagement.html">Suppliers</a>
+  <a href="CustomerManagement.html">Customers</a>
+  <a href="EmployeeManagement.html">Employees</a>
+  <a href="InventoryManagement.html">Inventory</a>
   <a href="#">Users</a>
   <a href="#">Log Out</a>
 
