--- a/FrontEnd/pages/EmployeeManagement.html
+++ b/FrontEnd/pages/EmployeeManagement.html
@@ -11,10 +11,10 @@
     <meta content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no" name="viewport">
     <meta content="green" name="theme-color">
 
-    <link href="../../assets/vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
+    <link href="../assets/vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Nunito:200,300,400,600,700,800,900" rel="stylesheet">
-    <link href="../../assets/vendor/styleslog/sb-admin-2.min.css" rel="stylesheet">
-    <link href="../../assets/vendor/sweetalert2-11.6.16/sweetalert2.min.css" rel="stylesheet">
+    <link href="../assets/vendor/styleslog/sb-admin-2.min.css" rel="stylesheet">
+    <link href="../assets/vendor/sweetalert2-11.6.16/sweetalert2.min.css" rel="stylesheet">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
@@ -109,14 +109,14 @@
             margin-top: 20px;
         }
     </style>
-    <link rel="stylesheet" href="../../assets/css/Dashboard.css">
-    <link rel="stylesheet" href="../../assets/css/styles.css">
+    <link rel="stylesheet" href="../assets/css/Dashboard.css">
+    <link rel="stylesheet" href="../assets/css/styles.css">
 </head>
 <body style="background-color: #f8f9fa">
 
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <a class="navbar-brand" href="#">
-        <img src="../../assets/icon/icon.jpeg" alt="Logo">Hello Shoe - Shoe Management System
+        <img src="../assets/icon/icon.jpeg" alt="Logo">Hello Shoe - Shoe Management System
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -130,7 +130,7 @@
         <ul class="navbar-nav ml-auto">
             <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                    <img src="../../assets/img/admin1.jpg" alt="Admin Photo" class="rounded-circle" style="width: 50px;"> David Wilson
+                    <img src="../assets/img/admin1.jpg" alt="Admin Photo" class="rounded-circle" style="width: 50px;"> David Wilson
                 </a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                     <a class="dropdown-item" href="#">My Profile</a>
@@ -145,13 +145,13 @@
 </nav>
 
 <div class="sidebar" style="background-color: #a3b6ee">
-    <a href="../../pages/adminDashboard.html" class="active"><i class="fas fa-tachometer-alt"></i> Dashboard</a>
-    <a href="../adminPages/SaleManagement.html"><i class="fas fa-dollar-sign"></i> Sales</a>
-    <a href="../adminPages/OrderDetails.html"><i class="fas fa-receipt"></i> Sale Details</a>
-    <a href="../adminPages/SupplierManagement.html"><i class="fas fa-truck"></i> Suppliers</a>
-    <a href="../adminPages/CustomerManagement.html"><i class="fas fa-users"></i> Customers</a>
+    <a href="adminDashboard.html" class="active"><i class="fas fa-tachometer-alt"></i> Dashboard</a>
+    <a href="SaleManagement.html"><i class="fas fa-dollar-sign"></i> Sales</a>
+    <a href="OrderDetails.html"><i class="fas fa-receipt"></i> Sale Details</a>
+    <a href="SupplierManagement.html"><i class="fas fa-truck"></i> Suppliers</a>
+    <a href="CustomerManagement.html"><i class="fas fa-users"></i> Customers</a>
     <a href="../adminPages/EmployeeManagement.html"><i class="fas fa-user-tie"></i> Employees</a>
-    <a href="../adminPages/InventoryManagement.html"><i class="fas fa-boxes"></i> Inventory</a>
+    <a href="InventoryManagement.html"><i class="fas fa-boxes"></i> Inventory</a>
     <a href="#"><i class="fas fa-user"></i> Users</a>
     <a href="#"><i class="fas fa-sign-out-alt"></i> Log Out</a>
 </div>
@@ -322,7 +322,7 @@
     </div>
 </footer>
 
-<script src="../../assets/js/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
+<script src="../assets/js/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
 <script crossorigin="anonymous"
         integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
         src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js"></script>
