--- a/FrontEnd/pages/InventoryManagement.html
+++ b/FrontEnd/pages/InventoryManagement.html
@@ -10,10 +10,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no">
   <meta name="theme-color" content="green">
 
-  <link href="../../assets/vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
+  <link href="../assets/vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
   <link href="https://fonts.googleapis.com/css?family=Nunito:200,300,400,600,700,800,900" rel="stylesheet">
-  <link href="../../assets/vendor/styleslog/sb-admin-2.min.css" rel="stylesheet">
-  <link href="../../assets/vendor/sweetalert2-11.6.16/sweetalert2.min.css" rel="stylesheet">
+  <link href="../assets/vendor/styleslog/sb-admin-2.min.css" rel="stylesheet">
+  <link href="../assets/vendor/sweetalert2-11.6.16/sweetalert2.min.css" rel="stylesheet">
   <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
@@ -110,7 +110,7 @@
 
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
   <a class="navbar-brand" href="#">
-    <img src="../../assets/icon/icon.jpeg" alt="Logo" class="logo mr-2"> Shoe Management System
+    <img src="../assets/icon/icon.jpeg" alt="Logo" class="logo mr-2"> Shoe Management System
   </a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
@@ -124,7 +124,7 @@
     <ul class="navbar-nav ml-auto">
       <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-          <img src="../../assets/img/admin1.jpg" alt="Admin Photo" class="rounded-circle" style="width: 50px;">
+          <img src="../assets/img/admin1.jpg" alt="Admin Photo" class="rounded-circle" style="width: 50px;">
           David Wilson
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
@@ -140,12 +140,12 @@
 </nav>
 
 <div class="sidebar" style="background-color: #a3b6ee">
-  <a href="../../pages/adminDashboard.html" class="active"><i class="fas fa-tachometer-alt"></i> Dashboard</a>
-  <a href="../adminPages/SaleManagement.html"><i class="fas fa-dollar-sign"></i> Sales</a>
-  <a href="../adminPages/OrderDetails.html"><i class="fas fa-receipt"></i> Sale Details</a>
-  <a href="../adminPages/SupplierManagement.html"><i class="fas fa-truck"></i> Suppliers</a>
-  <a href="../adminPages/CustomerManagement.html"><i class="fas fa-users"></i> Customers</a>
-  <a href="../adminPages/EmployeeManagement.html"><i class="fas fa-user-tie"></i> Employees</a>
+  <a href="adminDashboard.html" class="active"><i class="fas fa-tachometer-alt"></i> Dashboard</a>
+  <a href="SaleManagement.html"><i class="fas fa-dollar-sign"></i> Sales</a>
+  <a href="OrderDetails.html"><i class="fas fa-receipt"></i> Sale Details</a>
+  <a href="SupplierManagement.html"><i class="fas fa-truck"></i> Suppliers</a>
+  <a href="CustomerManagement.html"><i class="fas fa-users"></i> Customers</a>
+  <a href="EmployeeManagement.html"><i class="fas fa-user-tie"></i> Employees</a>
   <a href="../adminPages/InventoryManagement.html"><i class="fas fa-boxes"></i> Inventory</a>
   <a href="#"><i class="fas fa-user"></i> Users</a>
   <a href="#"><i class="fas fa-sign-out-alt"></i> Log Out</a>
@@ -168,8 +168,9 @@
 
       <div class="form-row">
         <div class="form-group col-md-6">
-          <label for="itemImage">Item Image</label>
-          <input type="file" class="form-control-file" id="itemImage">
+          <label for="itemImage">Item Picture (Base64)</label>
+          <input type="file" id="itemImage" name="itemImage" accept="image/*">
+          <img id="itemPicDisplay" src="" alt="Selected Image" style="max-width: 200px; max-height: 200px;">
         </div>
         <div class="form-group col-md-6">
           <label for="itemCategory">Category</label>
@@ -320,11 +321,25 @@
     saveItem();
   })
 
+  document.getElementById('itemImage').addEventListener('change', function(event) {
+    const file = event.target.files[0];
+    const reader = new FileReader();
+
+    reader.onload = function(e) {
+      const base64String = e.target.result.split(',')[1]; // Get base64 string without metadata
+      document.getElementById('itemPicDisplay').src = e.target.result; // Display the image
+      document.getElementById('itemImage').setAttribute('data-base64', base64String); // Store base64 string in a data attribute
+    };
+
+    if (file) {
+      reader.readAsDataURL(file); // Convert the image file to base64
+    }
+  });
   /*save*/
   function saveItem(){
     const itemCode = document.getElementById('itemCode').value;
     const itemDesc = document.getElementById('itemDesc').value;
-    const itemPicture = document.getElementById('itemImage').value;
+    const itemPicBase64 = document.getElementById('itemImage').getAttribute('data-base64');
     const category = document.getElementById('itemCategory').value;
     const size= document.getElementById('size').value;
     const quantity = document.getElementById('quantity').value;
@@ -340,7 +355,7 @@
     const item = {
       itemCode:itemCode,
       itemDesc:itemDesc,
-      itemPicture:itemPicture,
+      itemPicture:itemPicBase64,
       category:category,
       size:size,
       quantity:quantity,
@@ -376,11 +391,26 @@
     updateItem();
   })
 
+
+  document.getElementById('itemImage').addEventListener('change', function(event) {
+    const file = event.target.files[0];
+    const reader = new FileReader();
+
+    reader.onload = function(e) {
+      const base64String = e.target.result.split(',')[1]; // Get base64 string without metadata
+      document.getElementById('itemPicDisplay').src = e.target.result; // Display the image
+      document.getElementById('itemImage').setAttribute('data-base64', base64String); // Store base64 string in a data attribute
+    };
+
+    if (file) {
+      reader.readAsDataURL(file); // Convert the image file to base64
+    }
+  });
   /*save*/
   function updateItem(){
     const itemCode = document.getElementById('itemCode').value;
     const itemDesc = document.getElementById('itemDesc').value;
-    const itemPicture = document.getElementById('itemImage').value;
+    const itemPicBase64 = document.getElementById('itemImage').getAttribute('data-base64');
     const category = document.getElementById('itemCategory').value;
     const size= document.getElementById('size').value;
     const quantity = document.getElementById('quantity').value;
@@ -396,7 +426,7 @@
     const item = {
       itemCode:itemCode,
       itemDesc:itemDesc,
-      itemPicture:itemPicture,
+      itemPicture:itemPicBase64,
       category:category,
       size:size,
       quantity:quantity,
