--- a/FrontEnd/pages/adminDashboard.html
+++ b/FrontEnd/pages/adminDashboard.html
@@ -51,7 +51,7 @@
             <div class="sidebar">
                 <a href="../pages/userDashboard.html">Dashboard</a>
                 <a id="userSalesControllerSection">Sales</a>
-                <a href="adminPages/OrderDetails.html">Sale Details</a>
+                <a href="OrderDetails.html">Sale Details</a>
                 <a id="userSupplierControllerSection">Suppliers</a>
                 <a id="userCustomerControllerSection">Customers</a>
                 <a id="userEmployeeControllerSection">Employees</a>
