--- a/FrontEnd/pages/OrderDetails.html
+++ b/FrontEnd/pages/OrderDetails.html
@@ -65,13 +65,13 @@
 </nav>
 
 <div class="sidebar">
-  <a href="adminDashboard.html">Dashboard</a>
+  <a href="adminPanel.html">Dashboard</a>
   <a href="SaleManagement.html">Sales</a>
   <a href="../adminPages/OrderDetails.html">Sale Details</a>
   <a href="SupplierManagement.html">Suppliers</a>
-  <a href="CustomerManagement.html">Customers</a>
-  <a href="EmployeeManagement.html">Employees</a>
-  <a href="InventoryManagement.html">Inventory</a>
+  <a href="customerPage.html">Customers</a>
+  <a href="employee.html">Employees</a>
+  <a href="item.html">Inventory</a>
   <a href="#">Users</a>
   <a href="#">Log Out</a>
 
