--- a/FrontEnd/pages/customerPage.html
+++ b/FrontEnd/pages/customerPage.html
@@ -145,13 +145,13 @@
 </nav>
 
 <div class="sidebar" style="background-color: #a3b6ee">
-  <a href="adminDashboard.html" class="active"><i class="fas fa-tachometer-alt"></i> Dashboard</a>
+  <a href="adminPanel.html" class="active"><i class="fas fa-tachometer-alt"></i> Dashboard</a>
   <a href="SaleManagement.html"><i class="fas fa-dollar-sign"></i> Sales</a>
   <a href="OrderDetails.html"><i class="fas fa-receipt"></i> Sale Details</a>
   <a href="SupplierManagement.html"><i class="fas fa-truck"></i> Suppliers</a>
   <a href="../adminPages/CustomerManagement.html"><i class="fas fa-users"></i> Customers</a>
-  <a href="EmployeeManagement.html"><i class="fas fa-user-tie"></i> Employees</a>
-  <a href="InventoryManagement.html"><i class="fas fa-boxes"></i> Inventory</a>
+  <a href="employee.html"><i class="fas fa-user-tie"></i> Employees</a>
+  <a href="item.html"><i class="fas fa-boxes"></i> Inventory</a>
   <a href="#"><i class="fas fa-user"></i> Users</a>
   <a href="#"><i class="fas fa-sign-out-alt"></i> Log Out</a>
 </div>
