--- a/FrontEnd/pages/User.html
+++ b/FrontEnd/pages/User.html
@@ -87,13 +87,13 @@
 </nav>
 
 <div class="sidebar">
-    <a href="adminDashboard.html"><i class="fas fa-tachometer-alt"></i> Dashboard</a>
+    <a href="adminPanel.html"><i class="fas fa-tachometer-alt"></i> Dashboard</a>
     <a href="../adminPages/SaleManagement.html"><i class="fas fa-dollar-sign"></i> Sales</a>
     <a href="OrderDetails.html"><i class="fas fa-receipt"></i> Sale Details</a>
     <a href="SupplierManagement.html" class="active"><i class="fas fa-truck"></i> Suppliers</a>
-    <a href="CustomerManagement.html"><i class="fas fa-users"></i> Customers</a>
-    <a href="EmployeeManagement.html"><i class="fas fa-user-tie"></i> Employees</a>
-    <a href="InventoryManagement.html"><i class="fas fa-boxes"></i> Inventory</a>
+    <a href="customerPage.html"><i class="fas fa-users"></i> Customers</a>
+    <a href="employee.html"><i class="fas fa-user-tie"></i> Employees</a>
+    <a href="item.html"><i class="fas fa-boxes"></i> Inventory</a>
     <a href="#"><i class="fas fa-user"></i> Users</a>
     <a href="#"><i class="fas fa-sign-out-alt"></i> Log Out</a>
 </div>
